# Spotify-Jenkins-CV

./: .env.example  .eslintrc.js  .gitignore  Dockerfile  Jenkinsfile  README.md  jest.config.js  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  tsconfig.tests.json
app/: main.py
app/api/middlewares/: cors.py  error.py
app/api/routes/: playlist.py
app/core/: config.py  logging.py
app/models/: schemas.py
app/services/: spotify_service.py
moodify/: .env.example  README.md  requirements.txt
moodify/src/: App.py  main.py
moodify/src/components/Button/: Button.py
moodify/src/components/Header/: Header.py
moodify/src/components/Hero/: Hero.py
moodify/src/components/MoodPage/: MoodPage.py
moodify/src/components/MoodSelector/: MoodSelector.py
moodify/src/components/PlaylistResult/: PlaylistResult.py
moodify/src/hooks/: useAuth.py
moodify/src/services/: MoodDetector.py  api.py
moodify/static/css/: styles.css
server/: .eslintrc.js  .gitignore  .jenkins-test  Dockerfile  JENKINS-SETUP.md  Jenkinsfile  README.md  env.example  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vitest.config.e2e.ts  vitest.config.ts
server/app/api/routes/: auth.py  health.py  playlist.py
server/app/services/: spotify_auth_service.py
server/src/: app.module.ts  main.ts
server/src/common/dtos/: api-response.dto.ts  auth.dto.ts  health.dto.ts  index.ts  spotify.dto.ts
server/src/common/filters/: global-exception.filter.ts  index.ts  not-found.filter.ts
server/src/common/interceptors/: response.interceptor.ts
server/src/common/types/: axios-error.types.ts
server/src/config/: config.module.ts  env.config.ts
server/src/modules/auth/: auth.controller.ts  auth.service.ts
server/src/modules/health/: health.controller.ts
server/src/modules/playlist/: playlist.controller.ts  playlist.module.ts
server/src/modules/spotify/: spotify.service.ts
server/src/utils/: logger.ts
server/tests/: conftest.py  test_playlist.py
server/tests/unit/: test_schemas.py
src/: app.ts  server.ts
src/controllers/: health.controller.ts
src/middlewares/: cors.middleware.ts  error.middleware.ts
src/routes/: health.routes.ts
src/types/: index.ts
src/utils/: logger.ts
tests/: conftest.py  health.controller.test.ts  setup.ts  test_health.py
tests/unit/: test_spotify_service.py
